main nav alignment fix

--- a/_sass/_site-header.scss
+++ b/_sass/_site-header.scss
@@ -163,14 +163,17 @@ a.remstep-logo {
         .main-nav {
             display: inline;
             ul, li {
+                position: relative;
                 display: inline-block;
             }
             ul li ul {
-                position: fixed;
+                position: absolute;
+                top: 2.4em;
+                left: 50%;
+                transform: translateX(-50%);
+                white-space: nowrap;
                 padding: 0;
-                margin-top: 1em;
                 font-size: 0.8em;
-                transform: translateX(-27%);
                 border-top: 1px solid $purple;
                 &:before {
                     content: "";
@@ -183,6 +186,9 @@ a.remstep-logo {
                     top: -5px;
                     left: 50%;
                     transform: translateX(-50%);
+                }
+                li {
+                    margin-top: 6px;
                 }
                 li:last-child {
                     margin-right: 0;
